tests/paczka2/big_fuzzy/27725972.err
Error in line 14: 121Usj S421 21,6
Error in line 15: 121Usj A996 95,0
Error in line 18: MfiZ1ry A641 210,3
Error in line 16: 121Usj S550 87,6
Error in line 22: 121Usj S421 81,9
Error in line 42: S421 S421 63,8
Error in line 32: MfiZ1ry S550 1,8
Error in line 54: VjZQ9ey87EG S421 74,6
Error in line 64: VjZQ9ey87EG A641 44,8
Error in line 65: VjZQ9ey87EG A996 98,6
Error in line 50: MfiZ1ry A641 76,3
Error in line 76: MfiZ1ry A996 61,6
Error in line 78: MfiZ1ry A641 55,2
Error in line 79: MfiZ1ry S550 338,4
Error in line 80: 0Y3or S550 19,5
Error in line 93: MfiZ1ry S421 43,3
Error in line 95: MfiZ1ry S550 90,8
Error in line 102: 7rYh7SqvT A996 00,2
Error in line 104: S421 A641 4,3
Error in line 90: DFpmMqH A996 24,0
Error in line 100: MfiZ1ry A641 45,8
Error in line 106: DFpmMqH A641 61,1
Error in line 103: VjZQ9ey87EG A641 81,0
Error in line 108: DFpmMqH A996 31,5
Error in line 98: 7rYh7SqvT A996 0,1
Error in line 105: S421 A996 55,3
Error in line 116: S421 S550 24,7
Error in line 119: 0Y3or S550 60,2
Error in line 123: 7rYh7SqvT A996 14,2
Error in line 125: 0Y3or A641 2,6
Error in line 127: 7rYh7SqvT A641 23,6
Error in line 139: 121UsjA99614,2
Error in line 138: VjZQ9ey87EG S421 94,6
Error in line 141: 0Y3or A641 94,74
Error in line 142: 0Y3or A996 33,5
Error in line 148: 0Y3or A641 95,2
Error in line 147: DFpmMqH A641 31,6
Error in line 158: 121Usj S421 16,3
Error in line 163: S421 A996 23,0
Error in line 164: 7rYh7SqvT S550 4,9
Error in line 167: VjZQ9ey87EG A996 80,7
Error in line 171: DFpmMqH S421 92,6
Error in line 157: 0Y3or A996 6,2
Error in line 182: 0Y3or S550 19,6
Error in line 185: 0Y3or S421 99,2
Error in line 204: 121Usj S421 26,7
Error in line 241: 0Y3or A996 240,2
